# mlviz

./: .gitignore  config_setup.ipynb  generate-types.sh
.github/workflows/: deploy-backend-test.yml  deploy-backend.yml  deploy-frontend-gcs-prod.yml  deploy-frontend-gcs-test.yml  deploy-frontend-gcs.yml  deploy-frontend-test.yml  deploy-frontend.yml  deploy-prod.yml  deploy-test.yml  deploy-to-prod.yml  deploy-to-test.yml  deploy.yml  generate-types.yml  initial-deploy.yml
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  app.py  decision_tree.py  dev.sh  generate_openapi.py  openapi.json  pyproject.toml
backend/_deprecated/: app.py  calculations.py  decision_tree.py  dt.ipynb  utils.py
backend/api/: dataset.py  decision_tree.py  kmeans.py  knn.py  models.py
backend/config/: decision_tree_params.json  kmeans_params.json  knn_params.json
backend/core/: config.py
backend/models/: __init__.py  base.py  dataset.py  decision_tree.py  kmeans.py  knn.py  util.py
backend/services/: __init__.py  dataset_service.py  decision_tree_service.py  kmeans_service.py  knn_service.py  manual_tree_service.py  model_cache.py
config/: app.py  config_setup.ipynb  models.py  pyproject.toml  slide_config_setup.ipynb
docs/: _index.md  todo.md
frontend/: .env.development  .env.example  .gitignore  Dockerfile  cloudbuild.yaml  components.json  index.html  nginx.conf  package-lock.json  package.json  test-docker-build.sh  test-docker.sh  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  (+3 more)
quartz/: package.json  quartz.config.ts  quartz.layout.ts
(+210 files in other folders)
